added more content to meet requirements

--- a/index.html
+++ b/index.html
@@ -9,10 +9,27 @@
 			<h1>So you think you can lease</h1
 		</header>
 		<p>  I have been a property manager for about eight years now and I have seen nearly every possible way of destroying a property; be it an apartment or just a room in a house, tenants can damage and destroy nearly anything. </p>
-		<p>  I had a tenant who rented a room in our house once who showed up to our "fancy dinner party" with friends and family in attendance completely naked. <br><img src ="images/gasp.gif" alt He was very drunk and I tried to put him to bed on the couch, but he urinated on the couch and the blanket.  I got him a new blanket and moved him to a dry couch only for him to do it again a few minutes later.  Finally, I moved him to a third (leather) couch and rejoined the dinner.  </p>
-		After a while, I became concerned because I heard a sound like water dripping or splashing near the entryway to our house.  We had a toilet that sometimes would run indefinitely and it had once flooded the entryway two floors below it, so I ran upstairs to check it, but as I went to the second floor, there was no sign of the water or sound of running water.  Upon decending the stairs, I saw the source was our (still naked) tenant was now urinating on the radiator just inside the door. </p>
-		<hr>
-		<p> If you are thinking of owning rental property, remind yourself of this story and of the fact that this was only one night of my eight year tenure in the business.</p>
+		<p>  I had a tenant who rented a room in our house once who showed up to our "fancy dinner party" with friends and family in attendance completely naked. <br>
+			
+			<center><video width="320" height="240" controls>
+				<source src="video/gasp.mp4" type="video/mp4">
+			  Your browser does not support the video tag.
+			  </video>
+			</center> <br>
 
+		<main>He was very drunk and I tried to put him to bed on the couch, but he urinated on the couch and the blanket.  I got him a new blanket and moved him to a dry couch only for him to do it again a few minutes later.  Finally, I moved him to a third (leather) couch and rejoined the dinner.  </p>
+		<p>After a while, I became concerned because I heard a sound like water dripping or splashing near the entryway to our house.  We had a toilet that sometimes would run indefinitely and it had once flooded the entryway two floors below it, so I ran upstairs to check it, but as I went to the second floor, there was no sign of the water or sound of running water.  Upon decending the stairs, I saw the source was our (still naked) tenant was now urinating on the radiator just inside the door. </p>
+		<p>He was finally taken upstairs to his bed where he vomitted before moving to my bed and doing the same.  I was just glad that he moved to another roommate's bed before urinating again.</p>
+		</main>
+		<hr>
+
+		<p> If you are thinking of owning rental property, remind yourself of this story and of the fact that this was only one night of my eight year tenure in the business.
+		</p>
+		<p>Finally, when I asked the tenant how he felt the next day, he responded &quot;I'm...okay...kinda worried I might have done something really bad last night but I don't really know. &nbsp;Did I finish that whole bottle of Vodka?&quot;</p>
+		<p><img src="images/smartRecovery.jpg" alt="He got help and AA is not the only program"></p>
+		<article>The story contained in this page is intended to be entertaining but also informative.  No names are used to protect the protected health information of the tenant.  </article>
+		
 	</body>
+	<footer>Disclaimer:  I have also had several good tenants.  The trouble is the bad ones can take so much of your time that you alienate the good ones because you don't have time to do the work for everyone...and good help can be hard to find on a budget.<hr>
+	</footer>
 </html>
