--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<p> If you are thinking of owning rental property, remind yourself of this story and of the fact that this was only one night of my eight year tenure in the business.
 		</p>
 		<p>Finally, when I asked the tenant how he felt the next day, he responded &quot;I'm...okay...kinda worried I might have done something really bad last night but I don't really know. &nbsp;Did I finish that whole bottle of Vodka?&quot;</p>
-		<p><img src="images/smartRecovery.jpg" alt="He got help and AA is not the only program"></p>
+		<p><img src="images/smartRecovery.png" alt="If AA is not the program for you, check out smartrecovery.org"></p>
 		<article>The story contained in this page is intended to be entertaining but also informative.  No names are used to protect the protected health information of the tenant.  </article>
 		
 	</body>
